--- a/docs/source/files/assignments/03.rst
+++ b/docs/source/files/assignments/03.rst
@@ -31,14 +31,12 @@ Inside the computeEigencoefficients function we compute :math:`\Delta x \Psi_{i-
 
   t_real l_xPsi;
   l_xPsi = -m_g * (i_bR - i_bL) * (t_real(0.5) *(i_hL + i_hR));
-  l_fDelta[1] -= l_xPsi;
 
-After that we substract the :math:`\Delta x \Psi_{i-1/2}` from :math:`\Delta f`.
+and then subtract it from :math:`\Delta f`.
 
 .. code:: 
 
-    alpha_1 = l_rInv[0][0] * l_fDelta[0] + l_rInv[0][1] * l_fDelta[1];
-    alpha_2 = l_rInv[1][0] * l_fDelta[0] + l_rInv[1][1] * l_fDelta[1];
+    l_fDelta[1] -= l_xPsi;
 
 
 3.1.2
@@ -49,11 +47,8 @@ TODO
 3.2. Reflecting Boundary Conditions
 ======================================
 
-
-
 Task 3.2.1 
 --------------------------
-
 
 Following setup has to be implemented 
 
@@ -62,34 +57,25 @@ Following setup has to be implemented
     (hu)_{i} &:= -(hu)_{i-1} \\
     b_{i} &:= b_{i-1}\end{split}
 
-In WavePropagation1d
+**File: WavePropagation1d.cpp**
 
 .. code:: cpp
 
-  t_real *l_b = m_b;
-
-  l_b[0] = l_b[1];
-  if (m_hasBoundaryL)
+  // use margin for comparison in case of rounding errors
+  tsunami_lab::t_real margin = 0.001;
+  if (i_h[i_ceR] <= margin)
   {
-    l_h[0] = l_h[1];
-    l_hu[0] = -l_hu[1];
+    // right cell dry
+    o_hR = i_h[i_ceL];
+    o_bR = m_b[i_ceL];
+    o_huR = -i_hu[i_ceL];
   }
-  else
+  else if (i_h[i_ceL] <= margin)
   {
-    l_h[0] = l_h[1];
-    l_hu[0] = l_hu[1];
-  }
-
-  l_b[m_nCells + 1] = l_b[m_nCells];
-  if (m_hasBoundaryR)
-  {
-    l_h[m_nCells + 1] = l_h[m_nCells];
-    l_hu[m_nCells + 1] = -l_hu[m_nCells];
-  }
-  else
-  {
-    l_h[m_nCells + 1] = l_h[m_nCells];
-    l_hu[m_nCells + 1] = l_hu[m_nCells];
+    // left cell dry
+    o_hL = i_h[i_ceR];
+    o_bL = m_b[i_ceR];
+    o_huL = -i_hu[i_ceR];
   }
 
 Task 3.2.2
@@ -108,12 +94,12 @@ TODO
 
 Task 3.4.1
 --------------------------
-We have used the `GEBCO grid<https://www.gebco.net/data_and_products/gridded_bathymetry_data/>`_ from 2021 to collect the bathymetry data.
-With `the Generic Mapping<https://www.generic-mapping-tools.org>`_ we cut data and trasnformed it onto a csv file. 
+We have used the `GEBCO grid <https://www.gebco.net/data_and_products/gridded_bathymetry_data/>`__ from 2021 to collect the bathymetry data.
+With `the Generic Mapping <https://www.generic-mapping-tools.org>`__ we cut data and transformed it into a `csv` file. 
 
 Task 3.4.2
 --------------------------
-For this task we used the function *splitline* that we implemented last week and modified it.
+For this task we used the function *splitline()* that we implemented last week.
 
 (**File: Csv.cpp**)
 
@@ -133,7 +119,6 @@ For this task we used the function *splitline* that we implemented last week and
 This function takes one line as a stringstream of the `csv` file as one input 
 and the character which separates the different values as another.
 There is a pointer to the vector of strings, which represents the, by the separator character, separated values of the `csv` file.
-
 
 Task 3.4.3
 --------------------------
@@ -167,7 +152,7 @@ To compute the values above we need the vertical displacement for the location x
 .. code::
 
     tsunami_lab::t_real tsunami_lab::setups::TsunamiEvent1d::computeD(t_real i_x,
-                                                                    t_real) const
+                                                                      t_real) const
     {
       i_x *= 250;
       if (i_x < 250000 && 175000 < i_x)
@@ -180,42 +165,43 @@ To compute the values above we need the vertical displacement for the location x
       }
     }
   
-We have to multiple the location of x by 250, because one point is sampled every 250 meters.
+We have to multiply the location of x by 250, because one point is sampled every 250 meters.
 
 .. note:: :math:`\delta` is the constant to avoid running into numerical issues. It is set to 20.
 
-**splitLine**
+**splitLine()**
 
 .. code:: cpp
 
-  void tsunami_lab::io::Csv::splitLine(std::stringstream line,
-                                     char separator,
-                                     std::vector<std::string> &valuesVector){
-    std::ifstream l_inputFile(i_file);
-      m_bathymetry = new std::vector<tsunami_lab::t_real>;
-
-      std::string l_line;
-      std::vector<std::string> l_row;
-      int l_rowCount = 0;
-      while (getline(l_inputFile, l_line))
-      {
-          if (l_line.substr(0, 1) == "#")
-              continue;
-          tsunami_lab::io::Csv::splitLine(std::stringstream(l_line), ',', l_row);
-          m_bathymetry->push_back(std::stof(l_row[3]));
-          ++l_rowCount;
-      }
-      l_inputFile.close();
-      m_bathymetryDataSize = l_rowCount;
+  tsunami_lab::setups::TsunamiEvent1d::TsunamiEvent1d(const std::string &i_file)
+  {
+    if(!std::filesystem::exists(i_file)){
+        std::cout << "Error: File not found " << "(TsunamiEvent1d.cpp)" << std::endl;
+        exit(1);
     }
 
-The constructor gets a filepath, height and the momentum as input.
-As long as there is a new line in the csv file the loop continues and writes the bathymetry into the vector.
-There is also a count for the amount of elements inside the vector to guarantee proper access.
-  
-The momentem functions always return 0.
+    std::ifstream l_inputFile(i_file);
+    m_bathymetry = new std::vector<tsunami_lab::t_real>;
 
-**getBathymetry**
+    std::string l_line;
+    std::vector<std::string> l_row;
+    while (getline(l_inputFile, l_line))
+    {
+        if (l_line.substr(0, 1) == "#")
+            continue;
+        tsunami_lab::io::Csv::splitLine(std::stringstream(l_line), ',', l_row);
+        m_bathymetry->push_back(std::stof(l_row[3]));
+    }
+    l_inputFile.close();
+    m_bathymetryDataSize = m_bathymetry->size();
+  }
+
+The constructor gets the path to a bathymetry csv file as its input.
+As long as there is a new line in the csv file, the loop continues and writes the bathymetry into the vector.
+  
+The momentum functions always return 0.
+
+**getBathymetry()**
 
 .. code:: cpp
   
@@ -254,9 +240,9 @@ The momentem functions always return 0.
       }
 
 For the bathymetry we first check if there is a legal access for the vector. After that, we check the min and max cases for either
-:math:`b_{in}` < 0 or the else case. In both sceanrios we have to add the vertical displacement.
+:math:`b_{in}` < 0 or the else case. In both scenarios we have to add the vertical displacement.
 
-**getHeight**
+**getHeight()**
 
 .. code:: cpp
 
@@ -280,7 +266,7 @@ For the bathymetry we first check if there is a legal access for the vector. Aft
     }
   }
 
-Similar to getBathymetry we check for the access also for the case whether :math:`b_{in}` < 0 or not.
+Similar to ``getBathymetry()`` we check for the access and also whether :math:`b_{in}` < 0 or not.
 Depending on that, we return the maximum of either :math:`-b_{in}` and :math:`\delta` or 0.
 
 Task 3.4.4
@@ -291,9 +277,12 @@ Task 3.4.4
 .. raw:: html
 
     <video width="100%" height="auto" controls>
-      <source src="" type="video/mp4">
+      <source src="../../_static/assets/tsunamiEvent1d_01.mp4" type="video/mp4">
     </video> 
 
-    TODO Video!!!!!!!
-
 As we can see, the wave propagates over time.
+
+.. note::
+
+  The wave reflecting from the left side happens because of the given condition
+  ``Cells which are initially dry stay dry for the entire simulation``.
