another quick format fix

--- a/docs/source/files/assignments/03.rst
+++ b/docs/source/files/assignments/03.rst
@@ -109,8 +109,10 @@ until it eventually flattens out with zero momentum.
 
 **Boundaries**
 
-We introduced two boolean parameters ``l_hasBoundaryL`` and ``l_hasBoundaryR`` which are passed onto the WavePropagation1d
+We introduced two boolean parameters ``l_hasBoundaryL`` and ``l_hasBoundaryR`` which are passed onto the ``WavePropagation1d``
 class. The names are pretty self-explanatory.
+
+
 Inside ``setGhostOutflow`` we have set the first and last cell as follows:
 When there is no boundary on a side, the according cell is set like: :math:`b_0 = b_1` or :math:`b_{n+1} = b_1`.
 If there has to be one, the bathymetry is set to 0,
