--- a/docs/source/files/assignments/03.rst
+++ b/docs/source/files/assignments/03.rst
@@ -204,8 +204,73 @@ It can be seen that this is indeed the one-sided version of the Shock-Shock prob
 3.3. Hydraulic Jumps
 ============================
 
+Task 3.3.1
+--------------
+The following equation is given for the Froude number
+
+.. math::
+  F := \frac{u}{\sqrt{gh}}.
+
+There are two individual setups for each subcritical and supercritical flow.
+
+**subcritical flow**
+
+.. math:: 
+  \begin{split}\begin{aligned}
+      b(x) &=
+        \begin{cases}
+          -1.8 - 0.05 (x-10)^2 \quad   &\text{if } x \in (8,12) \\
+          -2 \quad &\text{else}
+        \end{cases}\\
+      h(x, 0) &= -b(x) \quad \text{if } x \in [0,25] \\
+      hu(x, 0) &= 4.42 \quad \text{if } x \in [0,25].
+    \end{aligned}\end{split}
+
+
+**supercritical flow**
+
+.. math::
+  \begin{split}\begin{aligned}
+      b(x) &=
+        \begin{cases}
+          -0.13 - 0.05 (x-10)^2 \quad   &\text{if } x \in (8,12) \\
+          -0.33 \quad &\text{else}
+        \end{cases}\\
+      h(x, 0) &= -b(x) \quad \text{if } x \in [0,25] \\
+      hu(x, 0) &= 0.18 \quad \text{if } x \in [0,25].
+    \end{aligned}\end{split}
+
+
+For computing the maximum Froude number and its position we implemented ``setMaxFroude`` in both setups of the following task and used their functions.
+
+.. code:: cpp
+
+    t_real l_maxFroude = 0;
+    t_real l_posFroude = 0;
+    for (t_real l_i = 0; l_i < 25; l_i += 0.1)
+    {
+        if (0 < l_i &&  l_i < 25)
+        {
+            t_real l_u = getMomentumX(l_i, 0) / getHeight(l_i, 0);
+            t_real i_sqrt_m_h = t_real(std::sqrt(m_g * getHeight(l_i, 0)));
+            t_real l_result = l_u / i_sqrt_m_h;
+            if (l_result > l_maxFroude)
+            {
+                l_maxFroude = l_result;
+                l_posFroude = l_i;
+            }
+        }
+    }
+
+Within the function we iterate over the full interval (0,25). The Froude number gets computed for every position.
+The maximum value and its positions gets updated everytime a value is larger than the current one.
+
+As a result, we get the value of 0.584458 for the subcritical and 1.2263 for the supercritical flow. Both at position 10.
+
 Task 3.3.2
 ------------
+
+For the implementation of the setups we used the statements from above.
 
 Supercritical
 ^^^^^^^^^^^^^^^
