--- a/docs/source/files/assignments/04.rst
+++ b/docs/source/files/assignments/04.rst
@@ -3,6 +3,10 @@
 
 All project authors contributed to this assignment in equal parts.
 
+.. warning::
+    The projects :ref:`usage` has undergone major changes during this assignment. 
+    We strongly advice to visit that page (again).
+
 Task 4.1 - Dimensional Splitting
 ==================================
 
