--- a/docs/source/files/assignments/04.rst
+++ b/docs/source/files/assignments/04.rst
@@ -192,3 +192,145 @@ This creates a wall which can be seen clearly in the following animation:
 
 .. note::
     The visualisation was created with ParaView using the `TableToPoints` and `Delaunay2d` filters.
+
+Task 4.2 - Stations
+==================================
+
+4.2.1 - station setup
+-------------------------
+
+Inside the config.json file we introduced an stations-array where the user can assign multiple stations. 
+The mandatory variables are: station name, x-position and y-position.
+
+**(File: Station.cpp)**
+
+**Constructor**
+
+.. code:: cpp
+    tsunami_lab::io::Station::Station(t_real i_x,
+                                      t_real i_y,
+                                      std::string i_name,
+                                      tsunami_lab::patches::WavePropagation *i_waveProp)
+    {
+        m_x = i_x;
+        m_y = i_y;
+        m_name = i_name;
+        m_waveProp = i_waveProp;
+        m_stride = i_waveProp->getStride();
+        m_data = new std::vector<std::vector<t_real>>;
+    }
+
+The constructor gets the postion and name of the station and additionally the Wavepropagation patch.
+With the latter we can use the functions of Wavepropagation2d for the following functions.  
+Also a vector for the data vectorsis getting created.
+
+**capture**
+
+.. code::
+    void tsunami_lab::io::Station::capture(t_real i_time)
+    {
+        std::vector<t_real> capturedData;
+        capturedData.push_back(i_time);
+        if (m_waveProp->getHeight() != nullptr)
+            capturedData.push_back(m_waveProp->getHeight()[t_idx(m_x + m_y * m_stride)]);
+        if (m_waveProp->getMomentumX() != nullptr)
+            capturedData.push_back(m_waveProp->getMomentumX()[t_idx(m_x + m_y * m_stride)]);
+        if (m_waveProp->getMomentumY() != nullptr)
+            capturedData.push_back(m_waveProp->getMomentumY()[t_idx(m_x + m_y * m_stride)]);
+        if (m_waveProp->getBathymetry() != nullptr)
+            capturedData.push_back(m_waveProp->getBathymetry()[t_idx(m_x + m_y * m_stride)]);
+        if (m_waveProp->getHeight() != nullptr && m_waveProp->getBathymetry() != nullptr)
+            capturedData.push_back(m_waveProp->getHeight()[t_idx(m_x + m_y * m_stride)] +
+                                m_waveProp->getBathymetry()[t_idx(m_x + m_y * m_stride)]);
+        m_data->push_back(capturedData);
+    }
+
+The capture function only gets the time as input and puts the values height, Momentum X/Y and Bathymetry into a captured data vector.
+In the end this vector gets pushed into the m_data vector we created in the constructor.
+
+**write**
+.. code::
+    void tsunami_lab::io::Station::write()
+    {
+        std::string l_path = m_filepath + "/" + m_name + ".csv";
+        std::ofstream l_file;
+        l_file.open(l_path);
+        // write the CSV header
+        l_file << "time";
+        if (m_waveProp->getHeight() != nullptr)
+            l_file << ",height";
+        if (m_waveProp->getMomentumX() != nullptr)
+            l_file << ",momentum_x";
+        if (m_waveProp->getMomentumY() != nullptr)
+            l_file << ",momentum_y";
+        if (m_waveProp->getBathymetry() != nullptr)
+            l_file << ",bathymetry";
+        if (m_waveProp->getHeight() != nullptr && m_waveProp->getBathymetry() != nullptr)
+            l_file << ",totalHeight";
+        l_file << "\n";
+
+        // write data
+        for (std::vector<t_real> elem : *m_data)
+        {
+            for (t_idx i = 0; i < elem.size()-1; i++)
+            {
+                l_file << elem[i] << ",";
+            }
+            l_file << elem[elem.size()-1];
+            l_file << "\n";
+        }
+        l_file.close();
+    }
+
+The write function is getting called for every station inside the given config file.
+
+
+**(File: Station.cpp)**
+
+Inside the main function we introduce the l_stations vector and set it up with the folowing code:
+
+.. code::
+    if (l_configData.contains("stations"))
+  {
+    for (json &elem : l_configData["stations"])
+    {
+      tsunami_lab::t_real l_x = elem.at("locX");
+      tsunami_lab::t_real l_y = elem.at("locY");
+      l_stations.push_back(new tsunami_lab::io::Station(l_x,
+                                                        l_y,
+                                                        elem.at("name"),
+                                                        l_waveProp));
+      std::cout << "Added station " << elem.at("name") << " at x: " << l_x << " and y: " << l_y << std::endl;
+    }
+  }
+
+.. code::
+    ...
+    if (l_simTime >= l_stationFrequency * l_captureCount)
+    {
+      for (tsunami_lab::io::Station *l_s : l_stations)
+      {
+        l_s->capture(l_simTime);
+      }
+      ++l_captureCount;
+    }
+    l_timeStep++;
+    l_simTime += l_dt;
+  }
+
+The stations output frequency determines how often the capture function for each sttaion is called.
+
+.. code::
+  for (tsunami_lab::io::Station *l_s : l_stations)
+  {
+    l_s->write();
+  }
+
+Now the csv files are getting written.
+
+4.2.2 -
+---------------------------
+
+4.2.3 - 1d vs 2d dambreak 
+-----------------------------
+
